--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
   
-  .aaa { 
+  .header { 
     text-align: center;
   }
   
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -40,18 +40,13 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.form {
   display: flex;
 }
 
-ul {
+.article {
   margin: 0;
   padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
 }
 
 input,
@@ -75,7 +70,7 @@ button:hover {
 
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="form__input"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -103,17 +98,17 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="form__input"] {
   display: block;
   margin: 0 0 20px;
 }
 
-#new-task {
+#form__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.section {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,7 +117,7 @@ li {
   align-items: center;
 }
 
-li > * {
+.section > * {
   vertical-align: middle;
 }
 
@@ -130,24 +125,24 @@ input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+.section > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.section > input[type="text"] {
   width: 226px;
 }
 
-.delete img {
+.button_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.button_delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -158,15 +153,15 @@ li > input[type="text"] {
 }
 
 /* Edit Task */
-li input[type=text] {
+.section input[type=text] {
   display: none;
 }
 
-.editMode input[type=text] {
+.section__edit-mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-.editMode label {
+.section__edit-mode label {
   display: none;
 }
